# eda-backend-ia2a

./: .env.example  .gitignore  FLUXO_FRONTEND_BACKEND.md  R2_UPLOAD_GUIDE.md  README.md  SISTEMA_APRIMORADO.md  configure_r2_cors.py  eda_api_demo.ipynb  eda_result.json  example_data.csv  init_db.py  main.py  pyproject.toml  test_analysis_flow.py  test_api.py  test_clientes_ecommerce.csv  test_complete_local.py  test_complete_system.py  test_data.csv  test_data_structure.py  test_enhanced_data.csv  test_enhanced_system.py  test_r2_upload.py  test_separator_detection.py
app/api/: cors_proxy.py  endpoints.py  enhanced_endpoints.py
app/core/: analysis_service.py  config.py  database.py  eda_processor.py  memory_config.py  r2_service.py  websocket.py
app/data/: eda_backend.db
app/models/: analysis.py  database.py  responses.py
app/repositories/: __init__.py  analysis_repository.py
app/services/: advanced_stats_service.py  data_analyzer.py  eda_processor.py  memory_config.py  persistent_analyzer.py  statistical_tests_service.py  temporal_analysis_service.py  visualization_service.py
