[tool.poetry]
name = "eda-backend"
version = "0.1.0"
description = "API FastAPI para análise exploratória de dados (EDA) de arquivos CSV"
authors = ["Anderson Nascimento <anderson.nascimentoafsn@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pandas = "^2.1.0"
ydata-profiling = "^4.6.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
setuptools = "^80.9.0"
boto3 = "^1.34.0"
botocore = "^1.34.0"
pydantic-settings = "^2.0.0"
openpyxl = "^3.1.5"
requests = "^2.32.5"
aiohttp = "^3.9.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
# Banco de dados
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
# Cache e WebSockets
redis = "^5.0.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --reload"